--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" href="/favicon.ico" sizes="48x48" />
+    <link rel="icon" href="/HB_LOGO_ICO_32x32.ico" sizes="32x32" />
+    <link rel="icon" href="/HB_LOGO_ICO_16x16.ico" sizes="16x16" />
+    <link rel="apple-touch-icon" href="/HB_LOGO_ICO_256x256.ico" />
   </head>
 
   <body>
