App information updated

--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
     <title>HalalBytes</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Discover authentic halal restaurants in your area with verified certifications, real reviews, and detailed halal information." />
+    <meta name="author" content="HalalBytes" />
 
     <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="HalalBytes - Find Halal Food Near You" />
+    <meta property="og:description" content="Discover authentic halal restaurants in your area with verified certifications, real reviews, and detailed halal information." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://halalbytes.co/" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="HalalBytes - Find Halal Food Near You" />
+    <meta name="twitter:description" content="Discover authentic halal restaurants in your area with verified certifications, real reviews, and detailed halal information." />
+    <meta name="twitter:image" content="/og-image.png" />
     <link rel="icon" href="/favicon.ico" sizes="48x48" />
     <link rel="icon" href="/HB_LOGO_ICO_32x32.ico" sizes="32x32" />
     <link rel="icon" href="/HB_LOGO_ICO_16x16.ico" sizes="16x16" />
